Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#15891 closed bug (fixed)

[bootloader] bootloader fails to load older haiku revision

Reported by: nephele Owned by: korli
Priority: normal Milestone: R1/beta2
Component: System/Boot Loader/BIOS Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I encountered this when trying to investiagate a possible regression in the new wpa_supplicant.
This may be 2 issues but treating it as one:
amd64: after selecting revision, bootloader loads kernel that jumps to CMOS then the bootloader starts and loads haiku normally (latest)
Pc: asus aspire one MBR install
x86: after selecting revision bootloader loads the kernel splash screen appears and then hangs (no icons light up)
Pc: medion md97600

bootloader for x86 is hrev54064
On x86 the latest revision i can boot is hrev54024, the lats one i cannot boot is hrev53967

bootloader for amd64 is hreb54042
On amd64 the latest revision i can boot is hrev54042, the last one i cannot boot is hrev53880

For both systems there are no intermediate states saved between those hrevs, maybe someone who updated their system after the latest failing one and before the latest working one can add info aswell to further narrow down the hrev. Or see if this is an issue on other mbr systems aswell in general.

Change History (5)

comment:1 by waddlesplash, 5 years ago

Owner: set to korli
Status: newassigned

The microcode change in hrev54003 is in that range; I don't know what else could have caused it. korli, was the boot breakage of older kernels by newer loaders intentional?

comment:2 by korli, 5 years ago

Indeed, an older kernel will compare the provided arg size, and fail to continue booting.

comment:4 by waddlesplash, 5 years ago

Resolution: fixed
Status: assignedclosed

Merged in hrev54079.

comment:5 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.